test/driver/non_existent_source.dmz
// RUN: (compiler ./non_existent.dmz || true) 2>&1 | filecheck %s
// CHECK: error: failed to open './non_existent.dmz'
